Reworked to ESM

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -1,51 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <title>swFn - Library for calling service worker staff as async function.</title>
+        <meta charset="UTF-8"/>
+        <title>swFn - Library for calling service worker staff as async functions.</title>
     </head>
     <body>
-        <script type="module">
-            import {swFn} from "https://friendlyted.github.io/swFn/swFn.js";
-
-            await navigator.serviceWorker.register("./sw.js");
-
-            async function testSyncOk() {
-                const result = await swFn("TEST_SYNC_OK");
-                console.assert(result === "sync ok", "testSyncOk FAILED");
-                console.log("TEST_SYNC_OK done")
-            }
-
-            async function testSyncError() {
-                try {
-                    const result = await swFn("TEST_SYNC_ERROR");
-                    console.assert(false, "testSyncError FAILED");
-                } catch (ex) {
-                    console.assert(ex.message === "sync error", "testSyncError FAILED");
-                }
-                console.log("TEST_SYNC_ERROR done")
-            }
-
-            async function testAsyncOk() {
-                const result = await swFn("TEST_ASYNC_OK");
-                console.assert(result === "async ok", "testAsyncOk FAILED");
-                console.log("TEST_ASYNC_OK done")
-            }
-
-            async function testAsyncError() {
-                try {
-                    const result = await swFn("TEST_ASYNC_ERROR");
-                    console.assert(false, "testAsyncError FAILED");
-                } catch (ex) {
-                    console.assert(ex.message === "async error", "testAsyncError FAILED");
-                }
-                console.log("TEST_ASYNC_ERROR done")
-            }
-
-            testSyncOk();
-            testSyncError();
-            testAsyncOk();
-            testAsyncError();
-        </script>
+        <script type="module" src="front.js"></script>
     </body>
 </html>
